force-app/main/default/objects/Custom_Error_Log__c/Custom_Error_Log__c.object-meta.xml
<CustomObject>
    <description>To Capture error info in a transaction</description>
    <label>Custom Error Log</label>
    <nameField>
        <label>Custom Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>