force-app/main/default/objects/Custom_Error_Log__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Class name throwing the error</description>
    <label>Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>