force-app/main/default/objects/Custom_Error_Log__c/fields/ErrorTrace__c.field-meta.xml
<CustomField>
    <fullName>ErrorTrace__c</fullName>
    <label>ErrorTrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>