force-app/main/default/objects/Custom_Error_Log__c/fields/FailedRecords__c.field-meta.xml
<CustomField>
    <fullName>FailedRecords__c</fullName>
    <description>To list the records failed in a transaction</description>
    <label>FailedRecords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>