force-app/main/default/objects/Custom_Error_Log__c/fields/Functionality__c.field-meta.xml
<CustomField>
    <fullName>Functionality__c</fullName>
    <description>Category of the function that triggered this log.</description>
    <label>Functionality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bookings</fullName>
            </value>
            <value>
                <fullName>CompanyMaster</fullName>
            </value>
            <value>
                <fullName>Edubrite User Update</fullName>
            </value>
            <value>
                <fullName>ETM</fullName>
            </value>
            <value>
                <fullName>Polaris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>