force-app/main/default/objects/Custom_Error_Log__c/fields/Http_Request__c.field-meta.xml
<CustomField>
    <fullName>Http_Request__c</fullName>
    <description>Capture the request of callout</description>
    <label>Http Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>