force-app/main/default/objects/Custom_Error_Log__c/fields/Http_Response__c.field-meta.xml
<CustomField>
    <fullName>Http_Response__c</fullName>
    <label>Http Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>