force-app/main/default/objects/Custom_Error_Log__c/fields/Http_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>Http_StatusCode__c</fullName>
    <label>Http StatusCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>