force-app/main/default/objects/Custom_Error_Log__c/fields/Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Time__c</fullName>
    <description>API Request time</description>
    <label>Request Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>