force-app/main/default/objects/Custom_Error_Log__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <description>API Response timestamp</description>
    <label>Response Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>