force-app/main/default/objects/Custom_Error_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>ResultType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Application Failure</fullName>
            </value>
            <value>
                <fullName>Server Failure</fullName>
            </value>
            <value>
                <fullName>Salesforce Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>