force-app/main/default/objects/Custom_Error_Log__c/fields/Server_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Server_Endpoint__c</fullName>
    <description>Endpoint url of external system</description>
    <label>Server Endpoint</label>
    <type>Url</type>
</CustomField>