force-app/main/default/objects/Custom_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception_Message__c</columns>
    <columns>Functionality__c</columns>
    <columns>Http_Request__c</columns>
    <columns>Http_Response__c</columns>
    <columns>Http_StatusCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>DealRegistrationTriggerHelper</value>
    </filters>
    <label>Partner Onboarding Error Log</label>
</ListView>