force-app/main/default/objects/Custom_Error_Log__c/listViews/Edubrite_logs.listView-meta.xml
<ListView>
    <fullName>Edubrite_logs</fullName>
    <columns>NAME</columns>
    <columns>Exception_Message__c</columns>
    <columns>Http_Request__c</columns>
    <columns>Http_Response__c</columns>
    <columns>Http_StatusCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Functionality__c</field>
        <operation>equals</operation>
        <value>Edubrite User Update</value>
    </filters>
    <label>Edubrite logs</label>
</ListView>