force-app/main/default/objects/Custom_Error_Log__c/listViews/Enable_Partner_Error.listView-meta.xml
<ListView>
    <fullName>Enable_Partner_Error</fullName>
    <columns>NAME</columns>
    <columns>Exception_Message__c</columns>
    <columns>Functionality__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>contains</operation>
        <value>PO_Request_Service</value>
    </filters>
    <label>Enable Partner Error</label>
</ListView>