force-app/main/default/objects/Custom_Error_Log__c/listViews/Lead_Conversion_OCR_Error.listView-meta.xml
<ListView>
    <fullName>Lead_Conversion_OCR_Error</fullName>
    <columns>NAME</columns>
    <columns>Exception_Message__c</columns>
    <columns>Functionality__c</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>contains</operation>
        <value>DealRegistrationTriggerHelper</value>
    </filters>
    <label>Lead Conversion OCR Error</label>
</ListView>